--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.3.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>de.jensd</groupId>
+            <artifactId>fontawesomefx</artifactId>
+            <version>8.9</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -142,7 +147,6 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-
 
             <plugin>
                 <groupId>io.github.fvarrui</groupId>
@@ -168,5 +172,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
